--- a/JniTest/build.gradle
+++ b/JniTest/build.gradle
@@ -11,11 +11,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        externalNativeBuild {
-            cmake {
-                abiFilters 'armeabi-v7a'
-            }
-        }
+//        externalNativeBuild {
+//            cmake {
+//                abiFilters 'armeabi-v7a'
+//            }
+//        }
     }
     buildTypes {
         release {
@@ -23,11 +23,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    externalNativeBuild {
-        cmake {
-            path "CMakeLists.txt"
-        }
-    }
+//    externalNativeBuild {
+//        cmake {
+//            path "CMakeLists.txt"
+//        }
+//    }
     lintOptions {
         abortOnError false
     }
