--- a/BYDMonitor/build.gradle
+++ b/BYDMonitor/build.gradle
@@ -38,6 +38,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile (name:'testlibrary-release', ext:'aar')
-//    compile project(path: ':mylibrary')
+    compile (name: 'android-database-sqlcipher-3.5.9', ext: 'aar')
 }
