--- a/QRCode/build.gradle
+++ b/QRCode/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.1.3'
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile ('com.google.zxing:core:3.4.0')
 }
