--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,3 @@
 include ':happycolor', ':BYDMonitor', ':weixincachecleaner',':QRCode'
-include  /*':annotation-annotations', ':annotation-processors',  'testjars',*/':JniTest', ':ACM'
+include  ':annotation-annotations', ':annotation-processors',  'testjars',':JniTest', ':ACM'
+include ':plugindemo'
