--- a/BYDMonitor/build.gradle
+++ b/BYDMonitor/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile (name: 'android-database-sqlcipher-3.5.9', ext: 'aar')
+    compile 'com.amap.api:3dmap:latest.integration'
 }
