--- a/JniTest/src/main/AndroidManifest.xml
+++ b/JniTest/src/main/AndroidManifest.xml
@@ -5,7 +5,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MyApplication"
@@ -40,6 +44,15 @@
         <activity
             android:name=".SurfaceViewActivity"
             android:label="@string/title_surfaceview"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name=".GLSurfaceViewActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name=".SoundGenerateActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name=".EnergyActivity"
             android:theme="@android:style/Theme.NoTitleBar" />
 
     </application>
