--- a/QRCode/src/main/AndroidManifest.xml
+++ b/QRCode/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:theme="@style/AppTheme">
 
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".ScanQRActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
